--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm install "
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
